# programmiersprachen-aufgabenblatt-2

source/: CMakeLists.txt  circle.cpp  circle.hpp  dsch_mei_uhr.cpp  rectangle.cpp  rectangle.hpp  window.cpp  window.hpp
